--- a/events.css
+++ b/events.css
@@ -1,1 +1,9 @@
-/* CSS declarations go here */
+body {
+    margin-top: 100px;
+}
+
+#map {
+    width: 300px;
+    height: 300px;
+    background: #ccc;
+}
